Add api url in .env

--- a/app/.env
+++ b/app/.env
@@ -1,2 +1,5 @@
-# comment
-REACT_APP_ENV = "dev"
+# Determine which data to use. "dev" for mocked data, "prod" for API data.
+REACT_APP_ENV_DATA = "dev"
+
+# API URL
+REACT_APP_ENV_API_URL = "http://localhost:3000/"
